# agent

./: CODE_OF_CONDUCT.md  Makefile  README.md  ipython_setup.py  license.md  pyproject.toml
.git-hooks/: pre-commit
.github/workflows/: lint.yml  publish.yml
agent/: client.py
agent/daemons/: actions.py
agent/hardware/: actions.py  commands.py
agent/inference/: commands.py
agent/training/: actions.py
agent/utils/: config.py  printer.py
agent/worker/: actions.py
examples/: distributed_training.md  hugging_face.py
spice/: __init__.py  __main__.py  cli.py  client.py
spice/auth/: actions.py  commands.py
spice/daemons/: actions.py  commands.py  launch_agents.py
spice/graphql/: sdk.py
spice/graphql/documents/: authentication.gql
spice/hardware/: actions.py  commands.py
spice/inference/: actions.py  commands.py
spice/job/: actions.py  commands.py
spice/tests/: test_version.py
spice/training/: actions.py  commands.py
spice/uploader/: actions.py
spice/utils/: config.py  launch_agents.py  printer.py
spice/worker/: actions.py  commands.py
spice_agent/: cli.py  client.py
spice_agent/auth/: commands.py
spice_agent/daemons/: actions.py  commands.py  launch_agents.py  launch_service.py
spice_agent/daemons/utils/: gpu_monitor.py  launch_gpu_monitor_service.py
spice_agent/graphql/: sdk.py
spice_agent/hardware/: actions.py
spice_agent/inference/: actions.py  factory.py  tasks.py  types.py
spice_agent/tests/: test_memory_size.py  test_version.py
spice_agent/training/: actions.py
spice_agent/training/trainers/: stable_diffusion.py  train_text_to_image_lora.py
spice_agent/uploader/: actions.py
spice_agent/utils/: config.py  memory_size.py  version.py
spice_agent/worker/: actions.py  actions_2.py  async_worker.py
