[tool.poetry]
name = "spice"
version = "0.1.0"
description = "spice agent"
authors = ["Dylan Stein <dylan@spice.cloud>"]
license = ""

[tool.poetry.dependencies]
python = "^3.11.3"
ruff = "^0.0.262"
gql = "^3.4.0"
aiohttp = "^3.8.4"
click = "^8.1.3"
psutil = "^5.9.5"
torch = "^2.0.0"
numpy = "^1.24.3"
transformers = "^4.28.1"
pika = "^1.3.1"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
prospector = "^1.8.4"
ipython = "^8.9.0"
ipdb = "^0.13.11"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
spice = "spice.cli:cli"

[tool.black]
target-version = ["py311",]
exclude = "generated"

[tool.isort]
# https://github.com/PyCQA/isort/wiki/isort-Settings
profile = "black"
# will group `import x` and `from x import` of the same module.
force_sort_within_sections = true
combine_as_imports = true

[tool.pylint.MAIN]
load-plugins = [
    "pylint.extensions.code_style",
    "pylint.extensions.typing",
]
django-settings-module = "config.settings"

[tool.pylint."MESSAGES CONTROL"]
# Reasons disabled:
# format - handled by black
# inconsistent-return-statements - doesn't handle raise
# wrong-import-order - isort guards this
disable = [
    "format",
    "inconsistent-return-statements",
    "wrong-import-order",
    "missing-class-docstring",
    "missing-function-docstring"
]

[tool.pylint.messages_control]
max-line-length = 88

[tool.pylint.CODE_STYLE]
max-line-length-suggestions = 88