[tool.poetry]
name = "spice_agent"
version = "0.1.8"
description = "spice agent"
authors = ["Dylan Stein <dylan@spice.cloud>", "Ankush Patel <ankush@spice.cloud>"]
license = ""

[tool.poetry.dependencies]
python = "^3.11.3"
gql = "^3.4.1"
aiohttp = "^3.8.4"
click = "^8.1.3"
psutil = "^5.9.5"
numpy = "^1.25.0"
transformers = "^4.30.2"
pika = "^1.3.1"
retry = "^0.9.2"
torch = "^2.0.1"
sentry-sdk = "^1.24.0"
datasets = "^2.13.1"
boto3 = "^1.26.165"
evaluate = "^0.4.0"
scikit-learn = "^1.2.2"
accelerate = "^0.20.3"
torchvision = "^0.15.2"
diffusers = "^0.17.1"
outdated = "^0.2.2"

[tool.poetry.dev-dependencies]
ruff = "^0.0.275"
black = "^23.3.0"
prospector = "^1.10.2"
ipython = "^8.9.0"
ipdb = "^0.13.11"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
isort = "^5.12.0"

# [[tool.poetry.source]]
# name = "pytorch"
# url = "https://download.pytorch.org/whl/nightly/cpu"
# default = false
# secondary = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
spice = "spice_agent.cli:cli"

[tool.black]
target-version = ["py311",]
exclude = "generated"

[tool.isort]
# https://github.com/PyCQA/isort/wiki/isort-Settings
profile = "black"
# will group `import x` and `from x import` of the same module.
force_sort_within_sections = true
combine_as_imports = true

[tool.pylint.MAIN]
load-plugins = [
    "pylint.extensions.code_style",
    "pylint.extensions.typing",
]
django-settings-module = "config.settings"

[tool.pylint."MESSAGES CONTROL"]
# Reasons disabled:
# format - handled by black
# inconsistent-return-statements - doesn't handle raise
# wrong-import-order - isort guards this
disable = [
    "format",
    "inconsistent-return-statements",
    "wrong-import-order",
    "missing-class-docstring",
    "missing-function-docstring"
]

[tool.pylint.messages_control]
max-line-length = 88

[tool.pylint.CODE_STYLE]
max-line-length-suggestions = 88
